# jts-log_analyze

./: .gitignore  .qmlls.ini  CMakeLists.txt  qrc_qml.cpp
qml/: BlackBoxPage.qml  Main.qml  MapViewer.qml  TextAnalyzerPage.qml  UpdateNotificationCard.qml  UpdaterDialog.qml  VehicleReviewPage.qml  qml.qrc
shared_lib/include/: base_sub_process.cpp  base_sub_process.h  i_sub_process_ipc_communication.h  i_sub_process_log_storage.h  log_entry.cpp  log_entry.h  message.cpp  message.h  process_state.h  sub_process_config_manager.cpp  sub_process_config_manager.h  sub_process_status_reporter.cpp  sub_process_status_reporter.h  vta_subprocess_base_global.h
src/: app_manager.cpp  app_manager.h  file_log_storage.cpp  file_log_storage.h  local_ipc_communication.cpp  local_ipc_communication.h  log_analyzer_subprocess.cpp  log_analyzer_subprocess.h  main.cpp  map_data_manager.cpp  map_data_manager.h  map_xml_parser.cpp  map_xml_parser.h  sqlite_text_handler.cpp  sqlite_text_handler.h  ssh_file_manager.cpp  ssh_file_manager.h  tcpclient.cpp  tcpclient.h  textfilehandler.cpp  textfilehandler.h  update_checker.cpp  update_checker.h
updater/: .qmlls.ini  CMakeLists.txt  updater.qrc
updater/include/: updater.h
updater/qml/: UpdaterWindow.qml
updater/src/: main.cpp  updater.cpp
